testdata/baselines/reference/submodule/conformance/commonJSReexport.errors.txt
main.js(1,22): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== main.js (1 errors) ====
    const { hardline } = require('./second').nested;
                         ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    hardline
    
==== first.js (0 errors) ====
    const hardline = { type: "hard" }
    module.exports = {
      hardline
    }
    
    
==== second.js (0 errors) ====
    module.exports = {
      nested: require('./first')
    };
    